components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: stackweb
  name: stackweb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: stackweb
